add button animation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <section class="container">
-    <button class="button">Button</button>
+    <button class="button">Button <span class="flare"></span></button>
   </section>
 
   <!-- Модальное окно -->
